Attempt to fix LH's offscreen-images failure [3]

--- a/src/styles/pages/plp.scss
+++ b/src/styles/pages/plp.scss
@@ -8,7 +8,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  min-height: 200px;
+  min-height: 300px;
 }
 
 .plp-hero {
